# cuda_on_ci

./: CMakeLists.txt  README.md  appveyor.yml  main.cpp  vectoradd.cu
